appId: ${APP_ID}
tags:
  - util
---
- assertVisible: Expo Forge
- assertVisible: "Let's Get Started "
- tapOn: "Let's Get Started "
- assertVisible: Sign In
